--- a/aboutUs.html
+++ b/aboutUs.html
@@ -37,7 +37,7 @@
 
             </p>
             
-            <img class="aboutChef" src="./assets/sushi-chef.jpg" alt="Sushi Chef">
+            <img class="slide-left aboutChef buttonFormFormat"  src="./assets/sushi-chef.jpg" alt="Sushi Chef">
 
         </article>
 
