--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords"  content="SUSHI, FOOD, COMIDA, DELIVERY, BARATO, PREMIUM, HISTORIA, LEYENDA, SOBRE NOSOTROS, CHEF">
+    <meta name="description" content="La gran historia solo aqui contada de como se origino este sabor tan particular.">
+    <title>Sobre Okabe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
