--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords"  content="SUSHI, FOOD, COMIDA, DELIVERY, BARATO, PREMIUM, CONTACTO, EMAIL, RECLAMO, CONSULTA">
+    <meta name="description" content="La pluma es mas poderosa que la espada, por eso, estamos atentos a sus consultas por medio de este formulario.">
+    <title>Contactar a Okabe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -24,11 +26,11 @@
     <section>
         <p class="titulos">FORMULARIO DE CONTACTO</p>
         <form action="Get" name="test" class="formBox" >
-            <label for="name">Su nombre: </label>
+            <label for="name" class="redFont">Su nombre: </label>
             <input type="text" value="" name="nombre"> 
-            <label for="email">Su Email: </label>
+            <label for="email" class="redFont">Su Email: </label>
             <input type="email" value="" name="email">
-            <label for="texto">Su consulta: </label>
+            <label for="texto" class="redFont">Su consulta: </label>
             <textarea name="texto" cols="30" rows="10"></textarea>
             <fieldset class="fields buttonFormFormat">
                 <label for="tipo"></label>
@@ -45,7 +47,6 @@
         </form>
 
     </section>
-
     <footer class="footerFormat"> 
         <p>Seguinos en Instagram: <img src="./assets/ig.png" alt="Logo Instagram" width="25" height="25"> Seguinos en Twitter: <img src="./assets/twittericon.png" alt="Logo Twitter" width="25" height="25"> Hecho en 2021 por MasuProductions.  </p>   
     </footer>
