--- a/onSale.html
+++ b/onSale.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords"  content="SUSHI, FOOD, COMIDA, DELIVERY, BARATO, PREMIUM, OFERTAS, COMBOS, PRECIOS">
+    <meta name="description" content="Con la llegada de las nuevas estaciones, ofrecemos los mejores precios en forma de estas ofertas.">
+    <title>Okabe Ofertas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -21,13 +23,48 @@
         </ul>
     </nav>
 
-    <section>
-        <article>
-            <p class="titulos">DESCUENTOS</p>
-            <img src="./assets/sale-art-scale.jpg" alt="sales" class="onSaleFood" width="600" height="600" >
-
-        </article>
-    </section>
+    <div class="wrapper">
+        <div class="card item1 " style="width: 18rem;">
+            <img src="./assets/sake.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Sake $25</h5>
+            <p class="card-text">250cc de vino de arroz (Contiene alcohol).</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+            </div>
+        </div>
+        <div class="card item2 " style="width: 18rem;">
+            <img src="./assets/wasabi.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Wasabi   $10</h5>
+            <p class="card-text">Pasta de rabano picante.</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+            </div>
+        </div>
+        <div class="card item3" style="width: 18rem;">
+            <img src="./assets/Soja.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Salsa de Soja   $25</h5>
+            <p class="card-text">250 cc de fermentación de granos de soja mezclado con agua.</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+            </div>
+        </div>
+        <div class="card item4" style="width: 18rem;">
+            <img src="./assets/onigiri.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Onigiri  $80</h5>
+            <p class="card-text">3 bolas de arroz cubiertas con alga.</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+            </div>
+        </div>
+        <div class="card item5" style="width: 18rem;">
+            <img src="./assets/Tablasushi.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Tabla surtida    $600</h5>
+            <p class="card-text">Surtido de sushi a eleccion del chef.</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+            </div>
+        </div>
+    </div>
 
 
     <footer class="footerFormat"> 
